--- a/contact_us.html
+++ b/contact_us.html
@@ -14,10 +14,12 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> -->
     <!-- ... Google Material Icon ... -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
     <!-- Vendor Js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/main.css">
@@ -29,148 +31,163 @@
 
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
+    <div class="container" style="border: 2px solid black;">
+
+        <header>
+            <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
+                <div class="container">
+
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <!-- Left side navigation -->
+                        <ul class="navbar-nav me-auto">
+                            <li class="nav-item">
+                                <a class="nav-link animate__animated animate__fadeIn" href="index.html">HOME</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link animate__animated animate__fadeIn" href="about.html">ABOUT</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link animate__animated animate__fadeIn" href="#" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    COUNTRIES
+                                    <span class="material-icons dropdown-icon">expand_more</span>
+                                </a>
+
+                                <div class="dropdown-menu animate__animated animate__fadeIn">
+                                    <a class="dropdown-item" href="country/regional.html">
+                                        <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon"
+                                            style="visibility: hidden" />
+                                        REGIONAL
+                                    </a>
+                                    <a class="dropdown-item" href="country/malaysia.html">
+                                        <img src="assets/image/home/flags/malaysia.png" alt="Malaysia"
+                                            class="flag-icon" />
+                                        MALAYSIA
+                                    </a>
+                                    <a class="dropdown-item" href="country/indonesia.html">
+                                        <img src="assets/image/home/flags/indonesia.png" alt="Indonesia"
+                                            class="flag-icon" />
+                                        INDONESIA
+                                    </a>
+                                    <a class="dropdown-item" href="country/singapore.html">
+                                        <img src="assets/image/home/flags/singapore.png" alt="Singapore"
+                                            class="flag-icon" />
+                                        SINGAPORE
+                                    </a>
+                                    <a class="dropdown-item" href="country/thailand.html">
+                                        <img src="assets/image/home/flags/thailand.png" alt="Thailand"
+                                            class="flag-icon" />
+                                        THAILAND
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link animate__animated animate__fadeIn active"
+                                    href="contact_us.html">CONTACT
+                                    US</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link animate__animated animate__fadeIn" href="tc.html">T&C</a>
+                            </li>
+                        </ul>
+
+                        <!-- Right side register button -->
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link register-btn animate__animated animate__fadeIn"
+                                    href="https://sso.cgsi.com/aic/">REGISTER</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+        <section class="contact-section">
             <div class="container">
-                <!-- Mobile Register Button -->
-                <a class="nav-link register-btn d-lg-none" href="https://sso.cgsi.com/aic/">REGISTER</a>
+                <div class="contact-header scroll-animation" data-animation="animate__fadeInDown">
+                    <h1>CONTACT US</h1>
+                    <p class="contact-desc">Drop us an email if you have any questions on The Challenge.</p>
+                </div>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                    <ul class="navbar-nav align-items-center">
-                        <li class="nav-item">
-                            <a class="nav-link animate__animated animate__fadeIn" href="index.html">HOME</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link animate__animated animate__fadeIn" href="about.html">ABOUT</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link animate__animated animate__fadeIn" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                COUNTRIES
-                                <span class="material-icons dropdown-icon">expand_more</span>
+                <div class="contact-list">
+                    <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
+                        style="animation-delay: 0.1s;">
+                        <div class="flag-container">
+                            <img src="assets/image/home/flags/malaysia.png" alt="Malaysia Flag" class="country-flag">
+                        </div>
+                        <div class="contact-details">
+                            <h3>Malaysia</h3>
+                            <a href="mailto:investmentchallenge.my@cgsi.com" class="contact-email">
+                                <span class="material-icons">mail</span>
+                                investmentchallenge.my@cgsi.com
                             </a>
-                            <div class="dropdown-menu animate__animated animate__fadeIn">
-                                <a class="dropdown-item" href="country/regional.html">
-                                    <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon"
-                                        style="visibility: hidden;">
-                                    REGIONAL
-                                </a>
-                                <a class="dropdown-item" href="country/malaysia.html">
-                                    <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon">
-                                    MALAYSIA
-                                </a>
-                                <a class="dropdown-item" href="country/indonesia.html">
-                                    <img src="assets/image/home/flags/indonesia.png" alt="Indonesia" class="flag-icon">
-                                    INDONESIA
-                                </a>
-                                <a class="dropdown-item" href="country/singapore.html">
-                                    <img src="assets/image/home/flags/singapore.png" alt="Singapore" class="flag-icon">
-                                    SINGAPORE
-                                </a>
-                                <a class="dropdown-item" href="country/thailand.html">
-                                    <img src="assets/image/home/flags/thailand.png" alt="Thailand" class="flag-icon">
-                                    THAILAND
-                                </a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link animate__animated animate__fadeIn active" href="contact_us.html">CONTACT
-                                US</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link animate__animated animate__fadeIn" href="tc.html">T&C</a>
-                        </li>
-                        <li class="nav-item ms-lg-3 d-none d-lg-block">
-                            <a class="nav-link register-btn animate__animated animate__fadeIn"
-                                href="https://sso.cgsi.com/aic/">REGISTER</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+                        </div>
+                    </div>
 
-    <section class="contact-section">
-        <div class="container">
-            <div class="contact-header scroll-animation" data-animation="animate__fadeInDown">
-                <h1>CONTACT US</h1>
-                <p class="contact-desc">Drop us an email if you have any questions on The Challenge.</p>
-            </div>
+                    <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
+                        style="animation-delay: 0.2s;">
+                        <div class="flag-container">
+                            <img src="assets/image/home/flags/indonesia.png" alt="Indonesia Flag" class="country-flag">
+                        </div>
+                        <div class="contact-details">
+                            <h3>Indonesia</h3>
+                            <a href="mailto:investmentchallenge.id@cgsi.com" class="contact-email">
+                                <span class="material-icons">mail</span>
+                                investmentchallenge.id@cgsi.com
+                            </a>
+                        </div>
+                    </div>
 
-            <div class="contact-list">
-                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
-                    style="animation-delay: 0.1s;">
-                    <div class="flag-container">
-                        <img src="assets/image/home/flags/malaysia.png" alt="Malaysia Flag" class="country-flag">
+                    <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
+                        style="animation-delay: 0.3s;">
+                        <div class="flag-container">
+                            <img src="assets/image/home/flags/singapore.png" alt="Singapore Flag" class="country-flag">
+                        </div>
+                        <div class="contact-details">
+                            <h3>Singapore</h3>
+                            <a href="mailto:csi.investmentchallenge@cgsi.com" class="contact-email">
+                                <span class="material-icons">mail</span>
+                                csi.investmentchallenge@cgsi.com
+                            </a>
+                        </div>
                     </div>
-                    <div class="contact-details">
-                        <h3>Malaysia</h3>
-                        <a href="mailto:investmentchallenge.my@cgsi.com" class="contact-email">
-                            <span class="material-icons">mail</span>
-                            investmentchallenge.my@cgsi.com
-                        </a>
-                    </div>
-                </div>
 
-                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
-                    style="animation-delay: 0.2s;">
-                    <div class="flag-container">
-                        <img src="assets/image/home/flags/indonesia.png" alt="Indonesia Flag" class="country-flag">
+                    <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
+                        style="animation-delay: 0.4s;">
+                        <div class="flag-container">
+                            <img src="assets/image/home/flags/thailand.png" alt="Thailand Flag" class="country-flag">
+                        </div>
+                        <div class="contact-details">
+                            <h3>Thailand</h3>
+                            <a href="mailto:csth.investmentchallenge@cgsi.com" class="contact-email">
+                                <span class="material-icons">mail</span>
+                                csth.investmentchallenge@cgsi.com
+                            </a>
+                        </div>
                     </div>
-                    <div class="contact-details">
-                        <h3>Indonesia</h3>
-                        <a href="mailto:investmentchallenge.id@cgsi.com" class="contact-email">
-                            <span class="material-icons">mail</span>
-                            investmentchallenge.id@cgsi.com
-                        </a>
-                    </div>
-                </div>
 
-                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
-                    style="animation-delay: 0.3s;">
-                    <div class="flag-container">
-                        <img src="assets/image/home/flags/singapore.png" alt="Singapore Flag" class="country-flag">
-                    </div>
-                    <div class="contact-details">
-                        <h3>Singapore</h3>
-                        <a href="mailto:csi.investmentchallenge@cgsi.com" class="contact-email">
-                            <span class="material-icons">mail</span>
-                            csi.investmentchallenge@cgsi.com
-                        </a>
-                    </div>
-                </div>
-
-                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
-                    style="animation-delay: 0.4s;">
-                    <div class="flag-container">
-                        <img src="assets/image/home/flags/thailand.png" alt="Thailand Flag" class="country-flag">
-                    </div>
-                    <div class="contact-details">
-                        <h3>Thailand</h3>
-                        <a href="mailto:csth.investmentchallenge@cgsi.com" class="contact-email">
-                            <span class="material-icons">mail</span>
-                            csth.investmentchallenge@cgsi.com
-                        </a>
-                    </div>
-                </div>
-
-                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
-                    style="animation-delay: 0.5s;">
-                    <div class="flag-container">
-                        <img src="assets/image/home/flags/philippines.png" alt="Philippines Flag" class="country-flag">
-                    </div>
-                    <div class="contact-details">
-                        <h3>Philippines</h3>
-                        <p class="pending-text">&lt;pending&gt;</p>
+                    <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
+                        style="animation-delay: 0.5s;">
+                        <div class="flag-container">
+                            <img src="assets/image/home/flags/philippines.png" alt="Philippines Flag"
+                                class="country-flag">
+                        </div>
+                        <div class="contact-details">
+                            <h3>Philippines</h3>
+                            <p class="pending-text">&lt;pending&gt;</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+
+    </div>
 
     <footer class="footer">
         <div class="container text-center">
@@ -179,7 +196,7 @@
     </footer>
 
     <!-- Custom JS -->
-    
+
     <script src="assets/js/index.js"></script>
     <script src="assets/js/scroll-animation.js"></script>
 
